--- a/red-team-portfolio/package.json
+++ b/red-team-portfolio/package.json
@@ -16,7 +16,7 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "framer-motion": "^11.0.0",
-    "next": "14.2.5",
+    "next": "^14.2.33",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18"
